src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  overflow: hidden;
}

body {
  min-width: 100dvw;
  max-width: 100dvw;
  width: 100%;
  height: 100%;
}

.custom-scroll {
  scrollbar-gutter: stable both-edges;
  margin-left: -6px;
}

.custom-scroll::-webkit-scrollbar {
  width: 6px;
  height: 6px;
  border-radius: 2px;
}

.custom-scroll::-webkit-scrollbar-button {
  background: #aaa;
  width: 0;
  height: 0;
}

.custom-scroll::-webkit-scrollbar-track {
  background: transparent;
  width: 1px;
}

.custom-scroll::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 4px;
  position: absolute;
  width: 10px;
  background-clip: content-box;
}

.list::-webkit-scrollbar {
  width: 2px;
  border-radius: 2px;
}

.list::-webkit-scrollbar-button {
  background: #aaa;
  width: 0;
  height: 0; 
}

.list::-webkit-scrollbar-track {
  background: transparent;
  width: 10px;
}

.list::-webkit-scrollbar-thumb {
  background: #888;
  width: 6px;
  border-radius: 4px;
}

